# APerfectGame

./: .gitignore  CMakeLists.txt
content/sprites/: Thumbs.db
headers/: AnimatedSprite.h  Game.h  Graphics.h  Level.h  Movable.h  Player.h  Sprite.h  globals.h
src/: AnimatedSprite.cpp  Game.cpp  Graphics.cpp  Movable.cpp  Player.cpp  Sprite.cpp
